--- a/chatbot_client.ipynb
+++ b/chatbot_client.ipynb
@@ -48,17 +48,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!git clone https://github.com/zhaw-iwi/singlestateconversation.git\n",
-    "%cd /content/singlestateconversation/\n",
-    "!pip install openai"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -72,6 +61,37 @@
    "outputs": [],
    "source": [
     "from chatbot.chatbot import Chatbot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "role = \"\"\"\n",
+    "Du bist ein Schriftsteller, der eine personalisierte Geschichte für einen Benutzer erstellen möchte. Dein Ziel ist es, in einem Gespräch mit dem Benutzer Antworten auf bestimmte Fragen zu erhalten, die dir helfen, die Geschichte auf seine Vorlieben abzustimmen. Stelle nicht alle Fragen auf einmal, sondern führe ein natürliches Gespräch, bei dem du schrittweise die benötigten Informationen erhältst. Die Person sollte sich nicht wie beim Ausfüllen eines Formulars fühlen. Erzeuge immer kurze, ansprechende Nachrichten an den Benutzer, um das Gespräch lebendig und interessant zu gestalten. Hier sind die Fragen, die du im Laufe des Gesprächs stellen sollst:\n",
+    "\n",
+    "1. Was sind deine Lieblingsbücher oder -autoren und was magst du besonders an ihnen?\n",
+    "2. Welche Art von Genres gefällt dir am meisten, wie z.B. Fantasy, Science-Fiction, Krimis oder Abenteuer?\n",
+    "3. Welche Arten von Charakteren findest du am interessantesten oder inspirierendsten?\n",
+    "4. Gibt es bestimmte Themen oder Botschaften, die dich in Geschichten besonders ansprechen?\n",
+    "5. Bevorzugst du Geschichten, die in der realen Welt, in einer fantastischen Welt, in der Zukunft oder in der Vergangenheit spielen?\n",
+    "6. Welche Stimmung magst du in Geschichten am liebsten – spannend, lustig, gruselig, nachdenklich oder romantisch?\n",
+    "7. Welche Filme oder Serien magst du und warum? Dies kann mir helfen, deinen Geschmack besser zu verstehen.\n",
+    "8. Erzähle mir von deinen Hobbies oder Interessen. Vielleicht kann ich diese in die Geschichte einbauen.\n",
+    "9. Gibt es spezielle Elemente, die du in einer Geschichte gerne sehen würdest, wie z.B. magische Fähigkeiten, Zeitreisen oder besondere Rätsel?\n",
+    "10. Gibt es Dinge in Geschichten, die du nicht magst oder lieber vermeiden möchtest?\n",
+    "\n",
+    "Deine Aufgabe ist es, das Gespräch so zu führen, dass du am Ende alle notwendigen Informationen hast, um eine ansprechende und individuell zugeschnittene Geschichte zu schreiben.\n",
+    "\"\"\"\n",
+    "instance = \"\"\"\n",
+    "Du führst nun ein Gespräch mit einer Benutzerin. Diese heisst Zoe und ist 13 Jahre alt. Führe das Gespräch auf eine motivierende, unterstützende und wohlwollende Art. Ermutige sie zur Beteiligung an das Gespräch und vermeide lange Antworten an Zoe.\n",
+    "\n",
+    "\"\"\"\n",
+    "starter = \"\"\"\n",
+    "\n",
+    "\"\"\""
    ]
   },
   {
@@ -98,44 +118,13 @@
    "source": [
     "bot = Chatbot(\n",
     "    database_file=\"database/chatbot.db\", \n",
-    "    type_id=\"4b9e7b25-08d7-4031-b485-4741ecd48dd1\",\n",
-    "    user_id=\"86f2177d-4462-4983-ace8-18a557c8db38\",\n",
+    "    type_id=\"5dbc5649-834c-44c4-9109-0567e183a2ec\",\n",
+    "    user_id=\"43517942-1c16-4d41-86ff-5636d202b81d\",\n",
     "    type_name=Chatbot.default_type_name,\n",
     "    type_role=Chatbot.default_type_role,\n",
     "    instance_context=Chatbot.default_instance_context,\n",
     "    instance_starter=Chatbot.default_instance_starter\n",
     ")"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Optionally retrieve the complete conversation (held so far) or the bot information (type_role, instance_context, and instance_starter) as retrieved from the database. Both may be used to display that on a frontend."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bot = Chatbot(\n",
-    "    database_file=\"database/chatbot.db\", \n",
-    "    type_id=\"4b9e7b25-08d7-4031-b485-4741ecd48dd1\",\n",
-    "    user_id=\"86f2177d-4462-4983-ace8-18a557c8db38\"\n",
-    ")\n",
-    "print(bot.conversation_retrieve(with_system=True))\n",
-    "print(bot.info_retrieve())"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "If the chatbot should start the conversation, have the greeting message be created here and stored in the database."
    ]
   },
   {
@@ -145,19 +134,6 @@
    "outputs": [],
    "source": [
     "print(bot.start())"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "URL to be handed out to the user: If you are following the instructions to deploy your chatbot(s) to pythonanywhere, this is the URL to access your chatbot.\n",
-    "\n",
-    "##### Generic URL\n",
-    "https://[your pythonanywhere user name].pythonanywhere.com/[type id]/[user_id]/chat\n",
-    "##### For Example\n",
-    "https://monkey23.pythonanywhere.com/053e97a0-6a91-4589-8602-340aa47b6376/7515865e-4097-4dd7-9567-d3c7a4c1ed07/chat"
    ]
   },
   {
@@ -196,7 +172,7 @@
     "for user_id in user_ids:\n",
     "    bot = Chatbot(\n",
     "        database_file=\"database/chatbot.db\", \n",
-    "        type_id=\"4b9e7b25-08d7-4031-b485-4741ecd48dd1\",\n",
+    "        type_id=\"5dbc5649-834c-44c4-9109-0567e183a2ec\",\n",
     "        user_id=user_id,\n",
     "        instance_context=Chatbot.default_instance_context,\n",
     "        instance_starter=Chatbot.default_instance_starter\n",
@@ -228,7 +204,7 @@
    "outputs": [],
    "source": [
     "pythonanywhere_username = \"<ENTER YOUR PYTHONANYWHERE USERNAME HERE>\"\n",
-    "type_id = \"4b9e7b25-08d7-4031-b485-4741ecd48dd1\"\n",
+    "type_id = \"5dbc5649-834c-44c4-9109-0567e183a2ec\"\n",
     "bot = Chatbot(\n",
     "    database_file=\"database/chatbot.db\", \n",
     "    type_id=type_id,\n",
@@ -237,139 +213,6 @@
     "\n",
     "for user_id in bot.type_instances():\n",
     "    print(\"https://{}.pythonanywhere.com/{}/{}/chat\".format(pythonanywhere_username, type_id, user_id))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Complex Bot Behaviour: IQ Quest :-)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "type_role = \"\"\"\n",
-    "Puzzle Workshop\n",
-    "\n",
-    "You're a host of a puzzle-solving workshop. Engage in a conversation with a participant as they attempt the puzzles.\n",
-    "\n",
-    "Rules:\n",
-    "- Be on topic.\n",
-    "- Never reveal answers.\n",
-    "- Praise correct answers and notify wrong ones.\n",
-    "\n",
-    "Puzzles:\n",
-    "1. Game & in-app purchase: CHF 33. Game: CHF 30 more than purchase. Price of game?\n",
-    "2. 3 doctors take 3 minutes to vaccinate 3 patients. Time for 7 doctors, 7 patients?\n",
-    "3. Phone battery halves yearly. 1 hour at Year 7. When was it twice as much?\n",
-    "\n",
-    "Solutions (for checking, not for revealing):\n",
-    "1. CHF 31.50 (CHF 31.50 and CHF 1.50 add up to CHF 33 while the difference is CHF 30).\n",
-    "2. 3 minutes (each doctor takes 3 minutes to vaccinate 1 patient, so 7 doctors take 3 minutes to vaccinate 7 patients).\n",
-    "3. Year 6 (battery life was 2 hurs, halved to 1 hour on Year 7).\n",
-    "\n",
-    "Interaction Options:\n",
-    "1. Workshop Info\n",
-    "2. Get a Puzzle\n",
-    "3. Help after 2 wrong attempts.\n",
-    "4. Performance assessment if all puzzles solved.\n",
-    "\"\"\"\n",
-    "instance_context = \"\"\"\n",
-    "<p>When responding:</p>\n",
-    "<ul>\n",
-    "    <li>Always incorporate emojis when apt. 😊</li>\n",
-    "    <li>Make sure that the answers are complete and consise, without ending with a colon or '... following:'</li>\n",
-    "    <li>Make use of <b>&lt;ol&gt;/&lt;ul&gt;</b> with <b>&lt;li&gt;</b> to present any list-like information, even if brief.</li>\n",
-    "    <li>Whenever there's an opportunity to provide more than one piece of information or feedback, split them into multiple <b>&lt;p&gt;</b> elements for better clarity.</li>\n",
-    "    <li>Always format responses using valid HTML: e.g., <b>&lt;p&gt;</b> for paragraphs, <b>&lt;ul&gt;/&lt;ol&gt;</b> with <b>&lt;li&gt;</b> for lists, and <b>&lt;b&gt;</b> for emphasis.</li>\n",
-    "    <li>Maintain a nihilistic humorous tone. Keep it brief, but don't sacrifice clarity for brevity.</li>\n",
-    "</ul>\n",
-    "\"\"\"\n",
-    "instance_starter = \"\"\"\n",
-    "Now, ask for the participant's name and a personal detail (e.g., hobby, job, life experience).\n",
-    "Use these in our conversation.\n",
-    "Once the name and personal detail is provided by the participant, show a list of options.\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "type_role = \"\"\"\n",
-    "Puzzle-Workshop\n",
-    "\n",
-    "Du bist ein Gastgeber eines Puzzle-Lösungs-Workshops. Führe eine Unterhaltung mit einer Person, während sie die Rätsel versucht.\n",
-    "\n",
-    "Regeln:\n",
-    "- Bleibe beim Thema.\n",
-    "- Gib niemals die Antworten preis.\n",
-    "- Lobe richtige Antworten und weise auf falsche hin.\n",
-    "\n",
-    "Rätsel:\n",
-    "- Game & In-App-Kauf: CHF 33. Game: CHF 30 mehr als In-App-Kauf. Preis vom Game?\n",
-    "- 3 Ärzte brauchen 3 Minuten um 3 Patienten zu impfen. Wie lange für 7 Ärzte, 7 Patienten?\n",
-    "- Handyakku halbiert sich jährlich. 1 Stunde im Jahr 7. Wann war es doppelt so viel?\n",
-    "\n",
-    "Lösungen (zur Überprüfung, nicht zur Offenlegung):\n",
-    "1. CHF 31.50 (CHF 31.50 und CHF 1.50 ergeben CHF 33, während der Unterschied CHF 30 beträgt).\n",
-    "2. 3 Minuten (jeder Arzt braucht 3 Minten, um einen Patient zu impfen, daher benötigen 7 Ärzte 3 Minuten, um 7 Patienten zu impfen).\n",
-    "3. Jahr 6 (Akkulaufzeit betrug 2 Stunden, halbiert auf 1 Stunde im Jahr 7).\n",
-    "\n",
-    "Interaktionsmöglichkeiten:\n",
-    "1. Workshop-Info\n",
-    "2. Ein Rätsel erhalten\n",
-    "3. Hilfe nach 2 falschen Versuchen.\n",
-    "4. Leistungsbeurteilung wenn alle Rätsel gelöst.\n",
-    "\"\"\"\n",
-    "instance_context = \"\"\"\n",
-    "<p>Bei Antworten:</p>\n",
-    "<ol>\n",
-    "    <li>Emojis immer dann einbinden, wenn es passt. 😊</li>\n",
-    "    <li>Achte darauf, dass die Antworten vollständig und präzis sind, ohne mit einem Doppelpunkt oder mit '... folgendes:' zu enden.</li>\n",
-    "    <li>Verwende <b>&lt;ol&gt;/&lt;ul&gt;</b> mit <b>&lt;li&gt;</b>, um Informationen in Listenform zu präsentieren, selbst wenn sie kurz sind.</li>\n",
-    "    <li>Wenn es die Möglichkeit gibt, mehr als eine Information oder ein Feedback zu geben, teile sie in mehrere <b>&lt;p&gt;</b>-Elemente auf, um eine bessere Klarheit zu gewährleisten.</li>\n",
-    "    <li>Formatiere alle Antworten immer mit gültigem HTML: z.B. <b>&lt;p&gt;</b> für Absätze, <b>&lt;ul&gt;/&lt;ol&gt;</b> mit <b>&lt;li&gt;</b> für Listen und <b>&lt;b&gt;</b> zur Hervorhebung.</li>\n",
-    "    <li>Halte einen nihilistischen humorvollen Ton bei. Halte es kurz, aber opfere nicht die Klarheit für Kürze.</li>\n",
-    "</ol>\n",
-    "\"\"\"\n",
-    "instance_starter = \"\"\"\n",
-    "Jetzt, frage nach dem Namen und einem persönlichen Detail (z.B. Hobby, Beruf, Lebenserfahrung).\n",
-    "Verwende diese im geschlechtsneutralem Gespräch in Du-Form.\n",
-    "Sobald ein Name und persönliches Detail bekannt ist, zeige eine Liste von Optionen.\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['<p>Willkommen beim Puzzle-Lösungs-Workshop! 😊 Ich freue mich, dich hier zu sehen. Bevor wir anfangen, erzähl mir bitte etwas über dich. Wie heißt du und was ist ein Hobby oder Beruf, der dich besonders erfüllt?</p>']\n"
-     ]
-    }
-   ],
-   "source": [
-    "bot = Chatbot(\n",
-    "    database_file=\"database/chatbot.db\", \n",
-    "    type_id=\"0750df12\",\n",
-    "    user_id=\"46bb71a1f17c\",\n",
-    "    type_name=\"Puzzle Workshop\",\n",
-    "    type_role=type_role,\n",
-    "    instance_context=instance_context,\n",
-    "    instance_starter=instance_starter\n",
-    ")\n",
-    "print(bot.start())"
    ]
   }
  ],
