--- a/chatbot_client.ipynb
+++ b/chatbot_client.ipynb
@@ -1,60 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## A Chatbot using GPT and a Database\n",
-    "This allows multiple chatbot types (e.g. a health coach and a learning assistant) to be created. Multiple chatbot instances can be created per chatbot type (e.g. for User X and User Y). Both, type and instance are stored and referenced with an ID (e.g. with a UUID) in the database.\n",
-    "\n",
-    "This can support the deployment of chatbots in a web backend (state-less). For example, the UUIDs of the type and instance can be read as URL parameters from a URL that users have received from you.\n",
-    "\n",
-    "A chatbot is created with the following arguments.\n",
-    "- database_file: File of SQLite (in Folder data/)\n",
-    "- type_id: Reference to chatbot type\n",
-    "- instance_id: Reference to chatbot instance (typically one per user - however, may also be shared by multiple users)\n",
-    "- type_role: Role of chatbot type (will be turned into a first prompt with role:system)\n",
-    "- instance_context: Context of chatbot instance (will be turned into a second prompt with role:system)\n",
-    "- instance_starter: Will be used to generate an initial message to the user (will be turned into a final prompt with role:system)\n",
-    "\n",
-    "The following functions are meant to be used from an application (e.g. from controllers of a REST API).\n",
-    "- conversation_retrieve(with_system=False): Retrieve the previous conversation history (default: without prompts with role:system)\n",
-    "- start(): Returns an initial message to the user (Resulting from instance_starter prompt)\n",
-    "- respond(user_says): Returns an assistance response to user_says\n",
-    "- info_retrieve(): Returns the chatbot name, type role and instance context\n",
-    "- reset(): Resets the conversation so far"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### OpenAI API Key and Model\n",
-    "\n",
-    "Create file chatbot/openai.py with the following content\\\n",
-    "    OPENAI_KEY = \"your OpenAI API key\"\\\n",
-    "    OPENAI_MODEL = \"gpt-3.5-turbo-16k\"\\\n",
-    "(You may rename the file chatbot/openai_template.py to openai.py and set the keys there)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Google Colab Only: START\n",
-    "\n",
-    "You need a Google and Github account. Be prepared to authenticate yourself with both of these accounts."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Google Colab Only: END"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -65,73 +11,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "role = \"\"\"\n",
-    "Du bist ein Schriftsteller, der eine personalisierte Geschichte für einen Benutzer erstellen möchte. Dein Ziel ist es, in einem Gespräch mit dem Benutzer Antworten auf bestimmte Fragen zu erhalten, die dir helfen, die Geschichte auf seine Vorlieben abzustimmen. Stelle nicht alle Fragen auf einmal, sondern führe ein natürliches Gespräch, bei dem du schrittweise die benötigten Informationen erhältst. Die Person sollte sich nicht wie beim Ausfüllen eines Formulars fühlen. Erzeuge immer kurze, ansprechende Nachrichten an den Benutzer, um das Gespräch lebendig und interessant zu gestalten. Hier sind die Fragen, die du im Laufe des Gesprächs stellen sollst:\n",
-    "\n",
-    "1. Was sind deine Lieblingsbücher oder -autoren und was magst du besonders an ihnen?\n",
-    "2. Welche Art von Genres gefällt dir am meisten, wie z.B. Fantasy, Science-Fiction, Krimis oder Abenteuer?\n",
-    "3. Welche Arten von Charakteren findest du am interessantesten oder inspirierendsten?\n",
-    "4. Gibt es bestimmte Themen oder Botschaften, die dich in Geschichten besonders ansprechen?\n",
-    "5. Bevorzugst du Geschichten, die in der realen Welt, in einer fantastischen Welt, in der Zukunft oder in der Vergangenheit spielen?\n",
-    "6. Welche Stimmung magst du in Geschichten am liebsten – spannend, lustig, gruselig, nachdenklich oder romantisch?\n",
-    "7. Welche Filme oder Serien magst du und warum? Dies kann mir helfen, deinen Geschmack besser zu verstehen.\n",
-    "8. Erzähle mir von deinen Hobbies oder Interessen. Vielleicht kann ich diese in die Geschichte einbauen.\n",
-    "9. Gibt es spezielle Elemente, die du in einer Geschichte gerne sehen würdest, wie z.B. magische Fähigkeiten, Zeitreisen oder besondere Rätsel?\n",
-    "10. Gibt es Dinge in Geschichten, die du nicht magst oder lieber vermeiden möchtest?\n",
-    "\n",
-    "Deine Aufgabe ist es, das Gespräch so zu führen, dass du am Ende alle notwendigen Informationen hast, um eine ansprechende und individuell zugeschnittene Geschichte zu schreiben.\n",
+    "Du bist ein Schriftsteller namens Fabulex, der eine personalisierte Geschichte für einen Benutzer erstellen möchte.\n",
+    "Dein Ziel ist es, in einem natürlichen und angenehmen Gespräch mit dem Benutzer Antworten auf bestimmte Fragen zu erhalten, um die Geschichte auf seine Interessen und Vorlieben abzustimmen.\n",
+    "Stelle die Fragen einzeln und integriere sie geschickt in das Gespräch.\n",
+    "Verrate nicht, dass Du ein Schriftsteller bist und was das Ziel dieses Gesprächs ist. Führe das Gespräch als wäre es ein beliebiger Small Talk.\n",
+    "Hier sind die Fragen, auf die du Antworten erhalten willst.\n",
+    "- Lieblingsgeschichten: 'Erzähl mir, welche Geschichten, Filme oder Bücher haben dich zuletzt wirklich begeistert und warum?'\n",
+    "- Charaktere, die faszinieren: 'In jeder guten Geschichte gibt es Charaktere, die uns im Gedächtnis bleiben. Welche Art von Charakteren findest du faszinierend oder inspirierend?'\n",
+    "- Traumwelten: 'Wenn du in eine Welt aus einer Geschichte eintauchen könntest, welche wäre das? Eine magische Welt, eine ferne Zukunft, eine vergangene Epoche oder etwas ganz anderes?'\n",
+    "- Emotionen und Stimmungen: 'Was für ein Gefühl magst du, wenn du eine Geschichte liest, hörst oder schaust? Suchst du nach Spannung, Humor, Romantik, Abenteuer oder etwas, das zum Nachdenken anregt?'\n",
+    "- Persönliche Note: 'Gibt es etwas Besonderes, das du gerne in einer Geschichte sehen würdest, wie ein spezielles Thema, ein unerwartetes Element oder ein Hobby von dir, das Teil der Handlung wird?'\n",
+    "Deine Aufgabe als Chatbot ist es, das Gespräch so zu gestalten, dass du alle notwendigen Informationen erhältst, um eine fesselnde und maßgeschneiderte Geschichte zu kreieren.\n",
     "\"\"\"\n",
     "instance = \"\"\"\n",
-    "Du führst nun ein Gespräch mit einer Benutzerin. Diese heisst Zoe und ist 13 Jahre alt. Führe das Gespräch auf eine motivierende, unterstützende und wohlwollende Art. Ermutige sie zur Beteiligung an das Gespräch und vermeide lange Antworten an Zoe.\n",
-    "\n",
+    "Du führst nun ein Gespräch mit einer Benutzerin.\n",
+    "Die Benutzerin heisst Zoe.\n",
+    "Führe das Gespräch auf eine motivierende, unterstützende und wohlwollende Art.\n",
+    "Ermutige sie zur Beteiligung an das Gespräch und vermeide lange Antworten an Zoe.\n",
     "\"\"\"\n",
     "starter = \"\"\"\n",
+    "Bei deinen Antworten integriere Emojis, wo sie passend und hilfreich sind, um die Kommunikation freundlich und verständlich zu gestalten 😊.\n",
+    "Achte darauf, dass die Antworten vollständig und präzis sind, ohne mit einem Doppelpunkt oder mit '... folgendes:' zu enden. \n",
+    "Verwende <b><ol></b> oder <b><ul></b> mit <b><li></b>, um Informationen strukturiert in Listenform darzubieten, wenn dies die Klarheit fördert. \n",
+    "Gliedere deine Antwort in mehrere <b><p></b>-Elemente, um die Lesbarkeit bei der Präsentation mehrerer Informationen oder Feedbacks zu erhöhen. \n",
+    "Formatierung ist wichtig: Nutze gültiges HTML, wie <b><p></b> für Absätze und <b><b></b> für Hervorhebungen. \n",
+    "Deine Antworten sollten möglichst wenige Tokens beinhalten, wenn möglich weniger als 30.\n",
+    "Gib alle Antworten in korrektem Deutsch.\n",
     "\n",
+    "Beginne das Gespräch mit einer freundlichen Begrüßung. \n",
     "\"\"\""
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Create a chatbot \"Coach\" for user X"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In the following, we use the default type_name, type_role, instance_context, and instance_starter defined in the Chatbot class. Provide your own prompts instead."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "bot = Chatbot(\n",
     "    database_file=\"database/chatbot.db\", \n",
-    "    type_id=\"5dbc5649-834c-44c4-9109-0567e183a2ec\",\n",
-    "    user_id=\"43517942-1c16-4d41-86ff-5636d202b81d\",\n",
-    "    type_name=Chatbot.default_type_name,\n",
-    "    type_role=Chatbot.default_type_role,\n",
-    "    instance_context=Chatbot.default_instance_context,\n",
-    "    instance_starter=Chatbot.default_instance_starter\n",
+    "    type_id=\"0567e183a2ec\",\n",
+    "    user_id=\"aff446789464\",\n",
+    "    #type_name=\"Fabulex\",\n",
+    "    #type_role=role,\n",
+    "    instance_context=instance,\n",
+    "    instance_starter=starter\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Hallo Mirella! 😊  Wie geht es dir? Hast du in letzter Zeit einen guten Film gesehen oder ein Buch gelesen, das du als besonders packend empfunden hast? 📚🎬']\n"
+     ]
+    }
+   ],
    "source": [
     "print(bot.start())"
    ]
@@ -172,7 +117,7 @@
     "for user_id in user_ids:\n",
     "    bot = Chatbot(\n",
     "        database_file=\"database/chatbot.db\", \n",
-    "        type_id=\"5dbc5649-834c-44c4-9109-0567e183a2ec\",\n",
+    "        type_id=\"0567e183a2ec\",\n",
     "        user_id=user_id,\n",
     "        instance_context=Chatbot.default_instance_context,\n",
     "        instance_starter=Chatbot.default_instance_starter\n",
