--- a/chatbot_client.ipynb
+++ b/chatbot_client.ipynb
@@ -73,7 +73,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Hallo Mirella! 😊  Wie geht es dir? Hast du in letzter Zeit einen guten Film gesehen oder ein Buch gelesen, das du als besonders packend empfunden hast? 📚🎬']\n"
+      "['Hallo Zoe! 👋 Wie geht es dir heute? 😊']\n"
      ]
     }
    ],
