--- a/chatbot_client.ipynb
+++ b/chatbot_client.ipynb
@@ -30,9 +30,9 @@
     "\"\"\"\n",
     "instance = \"\"\"\n",
     "Du führst nun ein Gespräch mit einer Benutzerin.\n",
-    "Die Benutzerin heisst Zoe.\n",
+    "Die Benutzerin heisst Mimi und ist 33 Jahre alt.\n",
     "Führe das Gespräch auf eine motivierende, unterstützende und wohlwollende Art.\n",
-    "Ermutige sie zur Beteiligung an das Gespräch und vermeide lange Antworten an Zoe.\n",
+    "Ermutige sie zur Beteiligung an das Gespräch und vermeide lange Antworten an Mimi.\n",
     "\"\"\"\n",
     "starter = \"\"\"\n",
     "Bei deinen Antworten integriere Emojis, wo sie passend und hilfreich sind, um die Kommunikation freundlich und verständlich zu gestalten 😊.\n",
@@ -56,7 +56,7 @@
     "bot = Chatbot(\n",
     "    database_file=\"database/chatbot.db\", \n",
     "    type_id=\"0567e183a2ec\",\n",
-    "    user_id=\"aff446789464\",\n",
+    "    user_id=\"bc188a7b787f\",\n",
     "    #type_name=\"Fabulex\",\n",
     "    #type_role=role,\n",
     "    instance_context=instance,\n",
@@ -73,7 +73,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Hallo Zoe! 👋 Wie geht es dir heute? 😊']\n"
+      "['Hallo Mimi! 🌻 Hoffentlich hattest du einen großartigen Tag! Lass uns einfach mal über deine Begeisterung für Literatur und Filme plaudern. Mich würde interessieren, welche Geschichten, Filme oder Bücher dich zuletzt wirklich begeistert haben und warum sie das taten? 📚🎥']\n"
      ]
     }
    ],
@@ -177,7 +177,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4
  },
