remove google colab instructions

--- a/chatbot_setup_advanced.ipynb
+++ b/chatbot_setup_advanced.ipynb
@@ -32,19 +32,9 @@
    "source": [
     "#### OpenAI API Key and Model\n",
     "\n",
-    "Create file chatbot/openai.py with the following content\\\n",
+    "Rename the file chatbot/openai_template.py to openai.py and set the keys\n",
     "    OPENAI_KEY = \"your OpenAI API key\"\\\n",
-    "    OPENAI_MODEL = \"gpt-3.5-turbo-16k\"\\\n",
-    "(You may rename the file chatbot/openai_template.py to openai.py and set the keys there)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Google Colab Only: START\n",
-    "\n",
-    "You need a Google and Github account. Be prepared to authenticate yourself with both of these accounts."
+    "    OPENAI_MODEL = \"gpt-3.5-turbo-16k\"\\"
    ]
   },
   {
@@ -53,16 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!git clone https://github.com/zhaw-iwi/singlestateconversation.git\n",
-    "%cd /content/singlestateconversation/\n",
-    "!pip install openai"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Google Colab Only: END"
+    "%pip install openai"
    ]
   },
   {
