--- a/chatbot_setup.ipynb
+++ b/chatbot_setup.ipynb
@@ -5,29 +5,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## A Chatbot using GPT and a Database\n",
-    "This allows multiple chatbot types (e.g. a health coach and a learning assistant) to be created. Multiple chatbot instances can be created per chatbot type (e.g. for User X and User Y). Both, type and instance are stored and referenced with an ID (e.g. with a UUID) in the database.\n",
+    "# A Chatbot using GPT and a Database\n",
+    "This allows multiple chatbot types (e.g. a health coach and a learning assistant) to be created. Multiple chatbot instances can be created per chatbot type (e.g. a health coach for user X and user Y, and a learning assistant for user P and user Q). Both, types and instances are stored with and referenced by an ID (e.g. a UUID) in the database.\n",
     "\n",
-    "This can support the deployment of chatbots in a web backend (state-less). For example, the UUIDs of the type and instance can be read as URL parameters from a URL that users have received from you.\n",
+    "This can support the deployment of chatbots in a web backend (state-less). For example, the IDs of the type and instance can be read from parameters of a URL that users have received from you.\n",
     "\n",
     "A chatbot is created with the following arguments.\n",
     "- database_file: File of SQLite (in Folder data/)\n",
-    "- type_id: Reference to chatbot type\n",
-    "- instance_id: Reference to chatbot instance (typically one per user - however, may also be shared by multiple users)\n",
-    "- type_role: Role of chatbot type (will be turned into a first prompt with role:system)\n",
-    "- instance_context: Context of chatbot instance (will be turned into a second prompt with role:system)\n",
-    "- instance_starter: Will be used to generate an initial message to the user (will be turned into a final prompt with role:system)"
+    "- type_id: Reference to a chatbot type (existing or new one)\n",
+    "- instance_id: Reference to chatbot instance (existing or new one)\n",
+    "- type_role: Role prompt of chatbot type (will be turned into a first prompt with role:system)\n",
+    "- instance_context: Context prompt of chatbot instance (will be turned into a second prompt with role:system)\n",
+    "- instance_starter: Prompt that will be used to generate an initial message to the user (will be turned into a third prompt with role:system)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### OpenAI API Key and Model\n",
+    "### 1. Preparation\n",
     "\n",
-    "Rename the file chatbot/openai_template.py to openai.py and set the keys\n",
-    "    OPENAI_KEY = \"your OpenAI API key\"\\\n",
-    "    OPENAI_MODEL = \"gpt-3.5-turbo-16k\"\\"
+    "##### 1.1. Set the OpenAI API Key and Model\n",
+    "Rename the file **chatbot/openai_template.py** to **chatbot/openai.py** and set the following keys.\n",
+    "- OPENAI_KEY = \"your OpenAI API key in quotes\"\n",
+    "- OPENAI_MODEL = \"model name in quotes, e.g. gpt-3.5-turbo-16k\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 1.2. Install openai package"
    ]
   },
   {
@@ -43,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Import chatbot library"
+    "##### 1.3. Import Chatbot library"
    ]
   },
   {
@@ -60,7 +68,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Create a chatbot \"Puzzle Workshop\" for user X"
+    "### 2. Create a chatbot of type **health coach** for user **Daniel Müller**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.1. Prompt Engineering\n",
+    "To create a chatbot, we need to provide prompts. There are three prompts that can be used to customise the behaviour of the chatbot.\n",
+    "- **Role Prompt (type_role)**\n",
+    "    This prompt will be put at the beginning of the utterances sent to openai for completion. If you create multiple chatbots of the same type, this prompt will be the same for each one of them.\n",
+    "- **Context Prompt (instance_context)**\n",
+    "    This prompt will be put right after the role prompt. If you create multiple chatbots of the same type, this prompt will be used only for one of them.\n",
+    "- **Starter Prompt (instance_starter)**\n",
+    "    \n",
+    "\n",
+    "Before we create our bot and store it in the dabase, we can edit the prompts and customise our bot or just use the once as prepared below.\n",
+    "\n",
+    "##### type_role\n",
+    "Describes the general role of the chatbot.\n",
+    "    - What kind of persona should it enact/imitate. \n",
+    "    - What is the context it acts in\n",
+    "    - What is the goal of the conversation.\n",
+    "    \n",
+    "This prompt will be turned into a first prompt with role:system"
    ]
   },
   {
@@ -77,52 +109,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Prompt Engineering\n",
-    "Before we create our bot and store it in the dabase, we can edit the prompts and customise our bot or just use the once as prepared below.\n",
-    "\n",
-    "##### type_role\n",
-    "Describes the general role of the chatbot.\n",
-    "    - What kind of persona should it enact/imitate. \n",
-    "    - What is the context it acts in\n",
-    "    - What is the goal of the conversation.\n",
-    "    \n",
-    "This prompt will be turned into a first prompt with role:system"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "type_role = \"\"\"\n",
-    "Puzzle-Workshop\n",
-    "\n",
-    "Du bist ein Gastgeber eines Puzzle-Lösungs-Workshops. Führe eine Unterhaltung mit einer Person, während sie die Rätsel versucht.\n",
-    "\n",
-    "Regeln:\n",
-    "- Bleibe beim Thema.\n",
-    "- Gib niemals die Antworten preis.\n",
-    "- Lobe richtige Antworten und weise auf falsche hin.\n",
-    "\n",
-    "Rätsel:\n",
-    "- Game & In-App-Kauf: CHF 33. Game: CHF 30 mehr als In-App-Kauf. Preis vom Game?\n",
-    "- 3 Ärzte brauchen 3 Minuten um 3 Patienten zu impfen. Wie lange für 7 Ärzte, 7 Patienten?\n",
-    "- Handyakku halbiert sich jährlich. 1 Stunde im Jahr 7. Wann war es doppelt so viel?\n",
-    "\n",
-    "Lösungen (zur Überprüfung, nicht zur Offenlegung):\n",
-    "1. CHF 31.50 (CHF 31.50 und CHF 1.50 ergeben CHF 33, während der Unterschied CHF 30 beträgt).\n",
-    "2. 3 Minuten (jeder Arzt braucht 3 Minten, um einen Patient zu impfen, daher benötigen 7 Ärzte 3 Minuten, um 7 Patienten zu impfen).\n",
-    "3. Jahr 6 (Akkulaufzeit betrug 2 Stunden, halbiert auf 1 Stunde im Jahr 7).\n",
-    "\n",
-    "Interaktionsmöglichkeiten:\n",
-    "1. Workshop-Info\n",
-    "2. Ein Rätsel erhalten\n",
-    "3. Hilfe nach 2 falschen Versuchen.\n",
-    "4. Leistungsbeurteilung wenn alle Rätsel gelöst.\n",
+    "    As a digital therapy coach, check in daily with your patient to assess their well-being related to their chronic condition.\n",
+    "    Use open-ended questions and empathetic dialogue to create a supportive environment.\n",
+    "    Reflectively listen and encourage elaboration to assess the patient's detailed condition without directing the topic.\n",
     "\"\"\""
    ]
   },
@@ -146,15 +141,7 @@
    "outputs": [],
    "source": [
     "instance_context = \"\"\"\n",
-    "<p>Bei Antworten:</p>\n",
-    "<ol>\n",
-    "    <li>Emojis immer dann einbinden, wenn es passt. 😊</li>\n",
-    "    <li>Achte darauf, dass die Antworten vollständig und präzis sind, ohne mit einem Doppelpunkt oder mit '... folgendes:' zu enden.</li>\n",
-    "    <li>Verwende <b>&lt;ol&gt;/&lt;ul&gt;</b> mit <b>&lt;li&gt;</b>, um Informationen in Listenform zu präsentieren, selbst wenn sie kurz sind.</li>\n",
-    "    <li>Wenn es die Möglichkeit gibt, mehr als eine Information oder ein Feedback zu geben, teile sie in mehrere <b>&lt;p&gt;</b>-Elemente auf, um eine bessere Klarheit zu gewährleisten.</li>\n",
-    "    <li>Formatiere alle Antworten immer mit gültigem HTML: z.B. <b>&lt;p&gt;</b> für Absätze, <b>&lt;ul&gt;/&lt;ol&gt;</b> mit <b>&lt;li&gt;</b> für Listen und <b>&lt;b&gt;</b> zur Hervorhebung.</li>\n",
-    "    <li>Halte einen nihilistischen humorvollen Ton bei. Halte es kurz, aber opfere nicht die Klarheit für Kürze.</li>\n",
-    "</ol>\n",
+    "    Meet Daniel Müller, 52, who is tackling obesity with a therapy plan that includes morning-to-noon intermittent fasting, thrice-weekly 30-minute swims, and a switch to whole grain bread.\n",
     "\"\"\""
    ]
   },
